{working} - 웹소켓 방 생성 구현
