# src/docs/swagger.yaml
@@ -1304,4 +1304,41 @@ paths:
       summary: google oauth 로그인 콜백
       tags:
       - auth
+  /v0.2/rooms/create:
+    get:
+      description: |-
+        ■ errCode with 400
+        PARAM_BAD : 파라미터 오류
+        USER_NOT_FOUND : 유저를 찾을 수 없음
+        USER_ALREADY_EXISTED : 이미 존재하는 유저
+        Room_NOT_FOUND : 방을 찾을 수 없음
+        Room_FULL : 방이 꽉 참
+        Room_USER_NOT_FOUND : 방 유저를 찾을 수 없음
+
+        ■ errCode with 500
+        INTERNAL_SERVER : 내부 로직 처리 실패
+        INTERNAL_DB : DB 처리 실패
+        PLAYER_STATE_CHANGE_FAILED : 플레이어 상태 변경 실패
+      parameters:
+      - description: accessToken
+        in: header
+        name: tkn
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: 방 생성 (ws)
+      tags:
+      - rooms
 swagger: "2.0"
